# stock-tauri-app

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
scripts/: seed.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/ui/: alert-dialog.tsx  button.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  table.tsx
src/components/ui/feedback/: error-banner.tsx  loading-state.tsx
src/data/: exhausts.json
src/features/exhaust/: add-exhaust-dialog.tsx  delete-confirm-dialog.tsx  edit-exhaust-dialog.tsx  exhaust-table.tsx  print-label-dialog.tsx  print-product-label.tsx
src/hooks/: use-exhausts.ts
src/lib/: db.ts  exhaust-component-types.ts  exhaust-repo.ts  print-product-label.tsx
src/lib/database/: db.ts  exhaust-repo.ts  seeder.ts
src/lib/printing/: print-label-100x60mm.ts  print-product-label.tsx
src/lib/utils/: designation.ts  generate-id.ts  index.ts
src/types/: exhaust.ts
